--- a/data/slack-advanced.glade
+++ b/data/slack-advanced.glade
@@ -96,7 +96,7 @@
                             <property name="label" translatable="yes">accounts_fi_slack_open_chat</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
-                            <property name="active">False</property>
+                            <property name="active">True</property>
                             <property name="xalign">0.0</property>
                             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                           </widget>
@@ -106,6 +106,21 @@
                           </packing>
                         </child>
 
+                        <child>
+                          <widget class="RtcomParamBool" id="enable-avatar-download-Button-finger">
+                            <property name="field">enable_avatar_download</property>
+                            <property name="label" translatable="yes">accounts_fi_slack_enable_avatar_download</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="active">False</property>
+                            <property name="xalign">0.0</property>
+                            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                          </packing>
+                        </child>
                       </widget>
                     </child>
                   </widget>
